installation/istio-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-cni
---
apiVersion: v1
kind: Namespace
metadata:
  name: kuadrant-system
